# bribes-generation

./: .env.example  .gitignore  README.md  pyproject.toml
balpy_v2/: cache.py  config.py
balpy_v2/cli/: __main__.py  helpers.py
balpy_v2/contracts/: __init__.py  base_contract.py  contract_loader.py
balpy_v2/contracts/utils/: base_contract.py  contract_loader.py
balpy_v2/lib/: __init__.py  flatten_json.py  gql.py  time.py  web3_provider.py
balpy_v2/lib/llama/: __init__.py
balpy_v2/pools/: fees_report.py
balpy_v2/subgraphs/: balancer.py  blocks.py  client.py  gauges.py  query.py
balpy_v2/subgraphs/balancer/: __init__.py  balancers.py  pools.py  tokens.py
examples/: TODO
fees_reporting/: cycle.py  fees_report.py  fees_report_v2.py  fees_report_v3.py  llama.py
notebooks/: bal-358-investigate-bribes-generation-2.ipynb  bal-358-investigate-bribes-generation.ipynb  fee_differences.html  mainnet.csv
scripts/: fees_report.py
tests/balpy_v2/subgraphs/: test_blocks.py
