[tool.poetry]
name = "balpy_v2"
version = "0.1.2"
description = ""
authors = ["José Ribeiro <me@joseribeiro.dev>"]
readme = "README.md"
packages = [{ include = "balpy_v2" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
httpx = "^0.24.0"
web3 = "^6.3.0"
asyncclick = "^8.1.3.4"
python-dotenv = "^1.0.0"
jsondiff = "^2.0.0"
joblib = "^1.2.0"
nuitka = { version = "^1.5.7", allow-prereleases = true }


[tool.poetry.group.dev.dependencies]
pandas = "^2.0.1"
numpy = "^1.24.3"
ipykernel = "^6.22.0"
black = "^23.3.0"
coverage = { version = "5.0.3", extras = ["toml"] }
isort = { version = "^5.12.0", extras = ["pyproject"] }
pytest-mock = "^3.10.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.3.1"
autoflake = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# https://github.com/psf/black
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | venv
    | .venv
  )/
)
'''

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 88
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.autoflake]
remove_all_unused_imports = true
in_place = true

[tool.coverage]
# https://github.com/nedbat/coveragepy
[tool.coverage.run]
